@@ -1,0 +1,29 @@
+Channel init. pan + mute
+Impulse Tracker 2.14v5 IT 2.14
+1 8 8 1 1 6 125 2 0 128
+0 255
+64 1 0 
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+64 64 -1 0 0 0 0 0 127 0 0 0 0 0 0 0
+32 0 1 2 3 4 5 6 7
+32 52ff27339d93a01ae2e955fbb0b64ded
+32 785fe678918d5373d0d0b7a6956fc104
+32 d0c5f9b94252e01c529ba0e78fc1d2bc
+32 ff775e105bbba4ef97c3ee2a4be4995c
+32 999183cafff1ea18d947928c929cd66d
+32 95566868074b172c98563cd0b96c06e0
+32 73fc985285ba02a6b6c6010a713bcdff
+32 7ec35db58862b78fd8f44e37fa751a2c
+32 0 32 2 9ea794660efb5bf2a11288d93d6fe425 
+0 64 0
+128 64 0
+255 64 0
+255 64 16
+0 64 2
+128 64 2
+255 64 2
+255 64 18
